@@ -32,7 +32,7 @@ Now, enter the following lines\ldots
 \ldots and then press $\leftarrow$ to leave insert mode.
 Press \textsc{F7} to compile and run. If everything is entered right, you will be facing a wonderful color cycle.
 
-To get back into the editor, press \textsc{RESTORE}. (If your program is no longer running, you can instead get back in the editor using the word \texttt{fg}.)
+When you have seen enough, press \textsc{RESTORE} to reset the system, then enter \texttt{fg} to return to the editor.
 
 \section{Assembler}
 
