@@ -1212,6 +1212,13 @@ quit_reset
     sta $319
     cli
 
+    ; lores
+    lda #$9b
+    sta $d011
+    lda #$17
+    sta $dd00
+    sta $d018
+
     txa
     pha
 
